# education_website

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/database/: db.py
backend/app/routers/: auth.py  courses.py
backend/app/schemas/: course.py  user.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: select.tsx  sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CourseDetail.tsx  Courses.tsx  Dashboard.tsx  Home.tsx  LessonDetail.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
